Extract Customer interface as a domain model; Re-factor CustomerService to return Customer interface, but not the jpa entity;

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
                             <haltOnFailure>true</haltOnFailure>
                             <excludes>
                                 <exclude>**/dto/**</exclude>
+                                <exclude>**/exception/**</exclude>
                             </excludes>
                             <rules>
                                 <rule>
