--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <checksyle.version>9.0</checksyle.version>
         <checksyle-maven-plugin.version>3.1.2</checksyle-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+        <jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
     </properties>
     <dependencies>
         <dependency>
@@ -36,6 +37,11 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>${jackson-databind-nullable.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
